# expense-tracker

./: .env  Cargo.toml  README.md  diesel.toml  expenses.json  filename  ghost.csv  ghost1.csv  history.txt
migrations/: 0001_init.sql
migrations/2024-09-08-095142_expense/: down.sql  up.sql
migrations/2024-09-08-101052_001/: down.sql  up.sql
migrations/2024-09-08-102317_002/: down.sql  up.sql
migrations/2024-09-08-102932_003/: up.sql
migrations/2024-09-08-103516_more_pc_stats_fields/: up.sql
schema/: schema.rs
src/: lib.rs  main.rs  surrealdb.rs
src/expense_cli/: functions.rs  mod.rs  structs_enums.rs
src/post_database/: pdb.rs
src/surreal_db/: budget.rs  db.rs  mod.rs
src/system/: sys.rs
tests/: test_commands.rs  tests.rs
