[package]
name = "expense-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.16"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
comfy-table = "7.1.1"
rand = "0.8.5"
redis = "0.26.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
surrealdb = "1.5.4"
sysinfo = "0.31.4"
